<resources>
    <string name="app_name">DogApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="error_username">please enter a username</string>
    <string name="error_password">please enter a password</string>
    <string name="spaniel">Spaniel</string>
    <string name="retriever">Retriever</string>
    <string name="terrier">Terrier</string>
    <string name="poodle">Poodle</string>
    <string name="welcome_question">What kind of dog would you like to see,</string>
</resources>
