<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.c4q.dogapp.BreedsActivity">

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.CardView
        android:id="@+id/terrier_view"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/terrier_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/forty"
                android:text="@string/terrier"/>

            <ImageView
                android:id="@+id/terrier_imageview"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:tag="terrierTag"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/retriever_view"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retriever_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/forty"
                android:text="@string/retriever"/>

            <ImageView
                android:id="@+id/retriever_imageview"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:tag="retrieverTag"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/spaniel_view"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spaniel_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/forty"
                android:text="@string/spaniel"/>

            <ImageView
                android:id="@+id/spaniel_imageview"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:tag="spanielTag"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/poodle_view"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/poodle_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/forty"
                android:text="@string/poodle"/>

            <ImageView
                android:id="@+id/poodle_imageview"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:tag="poodleTag"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
